# freertos_pico_template

./: .gitignore  CMakeLists.txt  LICENSE
pico_src/: port.c
rtos_config/: FreeRTOSConfig.h
src/: main.cpp
